--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -43,8 +43,7 @@ refines the network on a substantially different field  providing an effective
 method of selecting samples to annotate for supporting the transfer. Our
 method takes into account the influence of the so far unlabeled samples on the
 weights of the network and  ranks and selects them accordingly for annotation.
-We evaluated our approach on two challenging  datasets from the agricultural
-robotics domain and show that we achieve a higher accuracy with a  smaller
+We evaluated our approach on two challenging  datasets and show that we achieve a higher accuracy with a  smaller
 number of samples compared to randomly selecting samples for annotation as well as
 uncertainty-based  approaches to select examples for annotation. Thus, our
 approach reduces the required human labeling  effort.
@@ -85,13 +84,13 @@ approach reduces the required human labeling  effort.
 		\label{fig:overview}    		
    \end{figure*}
 
-Image segmentation is a classical task in computer vision with many important applications, including the construction of autonomous systems, and medical image analysis. Over the last few years, deep convolutional neural networks~(CNNs) have firmly established themselves as the state-of-the-art approach to image segmentation. However, their accuracy crucially depends on the quality and quantity of the available training data.
+Image segmentation is a classical task in computer vision with many important applications, including environment perception of autonomous systems and medical image analysis. Over the last few years, deep convolutional neural networks~(CNNs) have firmly established themselves as the state-of-the-art approach for image segmentation. However, their accuracy crucially depends on the quality and quantity of the available training data.
 
 Having human experts annotate a large number of training images incurs a high cost. In many cases, it is now a limiting factor for achieving high-quality segmentations. Therefore, it has become popular to use transfer learning: Instead of training a neural network from a random initialization, an architecture that has been trained for a different task is re-used, and fine-tuned with a limited number of training samples for the new task. It has been observed that especially the features in early layers tend to be application independent, and that transfer learning has a beneficial effect even when it involves two distant tasks \cite{yosinski:2014}.
 
-Often, many more images are available for the target task than the human has time to annotate. In this scenario, it can be beneficial to rank the unlabeled images with respect to their expected benefit for fine-tuning the network. This is referred to as active learning, since the learning technique actively asks for labels on specific inputs. Most available active learning techniques focus on samples that the network is uncertain about. In this work, we propose an alternative strategy. It is based on two steps, which are illustrated in Figure~\ref{fig:overview}: In the first step, with minimal human intervention, a very weakly supervised segmentation of all unlabeled images is achieved. This leads to imperfect results, which will be used as a pseudo ground truth. In the second step, images are selected for annotation if the current network output deviates from their pseudo ground truth. In particular, we propose to use images for which the gradient of the loss with respect to the neural network weights has a large norm, since they are expected to have the largest impact during training. We combine this idea with two different strategies to achieve diversity in the chosen samples. The final refinement is done with the correct (i.e., manual) labels of the selected images.
+Often, many more images are available for the target task than the human has time to annotate. In this scenario, it can be beneficial to rank the unlabeled images with respect to their expected benefit for fine-tuning the network. This is referred to as active learning, since the learning technique actively asks for labels on specific inputs. Most available active learning methods focus on samples that the network is uncertain about. In this work, we propose an alternative strategy that is based on two steps as illustrated in Figure~\ref{fig:overview}: In the first step, with minimal human intervention, a very weakly supervised segmentation of all unlabeled images is achieved. This leads to imperfect results, which will be used as a pseudo ground truth. In the second step, images are selected for annotation if the current network output deviates from their pseudo ground truth. In particular, we propose to use images for which the gradient of the loss with respect to the neural network weights has a large norm, since they are expected to have the largest impact during training. We combine this idea with two different strategies to achieve diversity in the chosen samples. The final refinement is done with the correct (i.e., manual) labels of the selected images.
 
-We evaluate our novel strategy on a specific task from agricultural robotics. In precision farming, robots take an image of a field and  need to compute the semantic labels ``crop'', ``weed'',  or ``misc'' for every pixel, in order to perform automated weed control. A challenge lies in the fact that visual appearance varies substantially between years, regions, weather, and soil conditions. Thus, one often tries to adapt and refine existing semantic segmentation systems to new field conditions through annotated data from the new field. This is a perfect domain for transfer learning and active sample selection.
+We evaluate our novel strategy on a specific task from agricultural robotics, which is a perfect domain for transfer learning and active sample selection. In precision farming, robots take an image of a field and  need to compute the semantic labels ``crop'', ``weed'',  or ``misc'' for every pixel, in order to perform automated weed control. A challenge lies in the fact that visual appearance varies substantially between years, regions, weather, and soil conditions. Thus, one often tries to adapt and refine existing semantic segmentation systems to new field conditions through annotated data from the new field. 
 
 Our results indicate that, when only a small number of new training samples can be annotated, selecting them with our novel gradient-based approach results in a higher accuracy of the final refined CNN when compared to either a random or an uncertainty-based selection of training samples. We also demonstrate that the gradient-approach works better than making the selection simply based on the loss with respect to the same pseudo ground truth.
 
