--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -565,7 +565,7 @@ approach in the domain of crop/weed classification for agricultural robots,
 reducing the annotation efforts when moving to different fields or environmental
 conditions.
 
-In our approach, we computed pseudo ground truth labels using very weakly supervised 
+In our approach, we compute pseudo ground truth labels using very weakly supervised 
 segmentation and use those labels to estimate how new, unlabeled samples will 
 affect the weights of the CNN if selected for training. We select the training
 samples for user annotation based on the estimated effect on the weights and use them to refine the 
